Fixing error bonigarcia chrome driver